[package]
name = "ws-framer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple no-std framer for websockets (with alloc feature)"
repository = "https://github.com/filipton/ws-framer"

[lib]

[[example]]
name = "ws-framer-test"

[dependencies]
getrandom = "0.2.15"
httparse = { version = "1.9.5", default-features = false, optional = true }
itoa = { version = "1.0.11", optional = true }
ws-framer-macros = { path = "./macros" }

[dev-dependencies]
rand = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"

[features]
default = ["http"]
http = ["dep:httparse", "dep:itoa"]
alloc = []
