[package]
name = "ws-framer"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Simple no-std framer for websockets (with alloc feature)"
repository = "https://github.com/filipton/ws-framer"

[lib]

[[example]]
name = "ws-framer-test"

[dependencies]
getrandom = "0.2.15"
httparse = { version = "1.10.0", default-features = false, optional = true }
itoa = { version = "1.0.14", optional = true }
ws-framer-macros = { path = "./macros", version = "0.1.0" }

[dev-dependencies]
rand = "0.9.0"
clap = { version = "4.5.28", features = ["derive"] }
anyhow = "1.0.95"

[features]
default = ["http", "alloc"]
http = ["dep:httparse", "dep:itoa"]
alloc = []
