[package]
name = "ws-framer"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Simple no-std framer for websockets (with alloc feature)"
repository = "https://github.com/filipton/ws-framer"

[lib]

[[example]]
name = "ws-framer-test"

[dependencies]
getrandom03 = { version = "0.3.3", package = "getrandom", optional = true }
getrandom02 = { version = "=0.2.15", package = "getrandom", optional = true }
httparse = { version = "1.10.1", default-features = false, optional = true }
itoa = { version = "1.0.15", optional = true }
ws-framer-macros = { path = "./macros", version = "0.1.0" }

[dev-dependencies]
rand = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"

[features]
default = ["http", "getrandom03"]
http = ["dep:httparse", "dep:itoa"]
alloc = []
getrandom02 = ["dep:getrandom02"]
getrandom03 = ["dep:getrandom03"]
