[package]
name = "ws-framer-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple no-std framer for websockets (with alloc feature) - internal macros"
repository = "https://github.com/filipton/ws-framer"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits", "full"] }
itertools = "0.14.0"
